[package]
name = "papaya"
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["Ibraheem Ahmed <ibraheem@ibraheem.ca>"]
description = "A fast and ergonomic concurrent hash-table for read-heavy workloads."
keywords = ["concurrent", "hashmap", "atomic", "lock-free"]
repository = "https://github.com/ibraheemdev/papaya"
readme = "README.md"
exclude = ["assets/*"]

[dependencies]
seize = "0.4.4"
atomic-wait = "1.1.0"
serde = { version = "1.0.204", optional = true }

[dev-dependencies]
rand = "0.8.5"
base64 = "0.22.1"
hdrhistogram = "7.5.4"
dashmap = "5.5.3"
criterion = "0.5.1"
tokio = { version = "1.38.0", features = ["fs", "rt"] }
num_cpus = "1.16.0"
serde_json = "1.0.120"

[features]
default = []
serde = ["dep:serde"]

[profile.test]
inherits = "release"
debug-assertions = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(papaya_stress)', 'cfg(papaya_asan)'] }

[[bench]]
name = "single_thread"
harness = false

[[bench]]
name = "latency"
harness = false
